Switch to JDK21 + use virtual threads
first commit by claude-code