@@ -51,7 +51,7 @@ public class Supervisor implements AutoCloseable {
 
 	private static final Signal INT = new Signal("INT");
 
-	private final ExecutorService executor = Executors.newCachedThreadPool();
+	private final ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
 
 	private final List<Future<ExitStatus>> futures = new ArrayList<>();
 
